# TagDetection

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
app/example/: app_example.cc  app_example.h
app/tagdetection/: tag_detection.cc  tag_detection.h
common/benchmark/: CMakeLists.txt
common/datatype/: CMakeLists.txt
common/datatype/include/common/datatype/: gnss.h  imu.h  io.h  keypose.h  pose.h
common/logger/: CMakeLists.txt
common/timer/: CMakeLists.txt  timer.cc  timer.h  timerrecord_test.cpp
config/: app_configs.yaml  ros_configs.yaml
modules/apriltag_manager/: CMakeLists.txt  README.md  apriltag_manager.cc  apriltag_manager.h
modules/apriltag_manager/apriltag/: apriltag.h
modules/apriltag_manager/include/: apriltag_manager.h
modules/example/: CMakeLists.txt
ros/: CMakeLists.txt  ros_detection.cc  ros_example.cc
ros/launch/: run.launch
ros/rviz/: display.rviz
scripts/: ploy.py
